--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.username=hbstudent
 spring.datasource.password=hbstudent
 
 
+#
+#logging properties
+#
+logging.level.root=INFO
+logging.level.com.ushwamala.springboot.thymeleaf=TRACE
